<resources>

    <string name="app_name"> GPS Tracking App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getting_start">Get Started</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my__navigation_">Map</string>
    <string name="title_activity_user_location_main">UserLocationMainActivity</string>


    <!--Common-->
    <string name="Next">Next</string>
    <!---->


    <!--ste1 activity-->
    <string name="get_started_button">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>

    <!---->

    <!--Signup activity-->
    <string name="Email">Email</string>
    <!---->

    <!--password activity-->
    <string name="password">Password</string>
    <!---->

    <!--name activity-->
    <string name="enter_your_name">Enter Your Name</string>
    <!---->

    <!--invite code activity-->
    <string name="xxxxxx">XXXXXX</string>
    <string name="save_invite_code">Save this invite code your friend will need this if they want to join your circle</string>
    <string name="register">Register</string>
    <!---->

    <!--join circle activity-->
    <string name="enter_code">Enter circle code to add your friend</string>
    <string name="submit">Add</string>
    <!---->

    <!--login-->
    <string name="create_account">Create Account? </string>
    <string name="signup"> Signup</string>
    <!---->
    <!--drawer-->
    <string name="add_member">Add Members</string>
    <string name="joined_circle">Joined Circle</string>
    <string name="my_circle">My Circle</string>
    <string name="invite_members">Invite Members</string>
    <string name="send_location">Send Location</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="signout">Sign Out</string>

    <!---->


    <!--settings activity-->
    <string name="change_theme">Change Theme</string>
    <string name="change_password">Change Password</string>

    <!---->
    <!--change pasword activity-->
    <string name="enter_old_password">Enter Old Password</string>
    <string name="update">Update</string>
    <!---->

</resources>
