<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_joinCircle"
            android:icon="@drawable/join_circle"
            android:title="@string/add_member" />
        <item
            android:id="@+id/nav_myCircle"
            android:icon="@drawable/my_circle"
            android:title="@string/my_circle" />
        <item
            android:id="@+id/nav_joinedCircle"
            android:icon="@drawable/joined_circle"
            android:title="@string/joined_circle" />


    </group>

    <item android:title="Other">
    <menu>

        <item
            android:id="@+id/nav_inviteMembers"
            android:icon="@drawable/invite_members"
            android:title="@string/invite_members" />

        <item
            android:id="@+id/nav_shareLocation"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/send_location" />

        <item
            android:id="@+id/nav_editprofile"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <!--<item-->
        <!--android:id="@+id/nav_language"-->
        <!--android:icon="@drawable/ic_menu_share"-->
        <!--android:title="@string/change_language" />-->

        <item
            android:id="@+id/signOut"
            android:icon="@drawable/logout"
            android:title="@string/signout" />



    </menu>
    </item>

</menu>

