<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/change_language"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="25dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="15dp"
            android:foreground="?selectableItemBackground"
            app:contentPadding="4dp"
            >

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"


                >
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:layout_margin="10dp"
                    android:background="@drawable/languagechange"/>
                <TextView
                    android:id="@+id/change"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="7"
                    android:layout_marginTop="15dp"
                    android:text="@string/change_language"
                    android:textSize="22sp"
                    android:textStyle="bold"


                    />


            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>







        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="25dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="1dp"
            android:foreground="?selectableItemBackground"
            app:contentPadding="4dp"
            >

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                >
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:layout_margin="10dp"
                    android:background="@drawable/theme"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="7"
                    android:layout_marginTop="15dp"
                    android:text="@string/change_theme"
                    android:textSize="22sp"
                    android:textStyle="bold"


                    />


            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="25dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="15dp"
            android:foreground="?selectableItemBackground"
            app:contentPadding="4dp"
            >

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="gotoChangePasswordActivity"


                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:layout_margin="10dp"
                    android:background="@drawable/ic_lock_black_24dp" />

                <TextView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="7"
                    android:text="@string/change_password"
                    android:textSize="22sp"
                    android:textStyle="bold"


                    />


            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>




    </android.support.v7.widget.LinearLayoutCompat>










</RelativeLayout>